# archaeo-tomb-parser

./: .gitignore  README.md
examples/yangzhou_tombs/: tombs.csv  tombs.json  tombs.md
mcp-server/: LICENSE  pyproject.toml
mcp-server/archaeo_doc_parser/: __init__.py  mineru.py  server.py  tomb_parser.py
obsidian-plugin/: esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  styles.css  tomb_parser.ts
skill/: SKILL.md  template_parse_tombs.py
