[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archaeo-doc-parser"
version = "0.1.0"
description = "MCP server for parsing archaeological documents (PDF, images, Office) to Markdown via MinerU"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Xiaohan Chen" },
]
keywords = ["mcp", "archaeology", "pdf", "ocr", "document-parsing", "mineru"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/alexxhchen-nu/archaeo-doc-parser"
Issues = "https://github.com/alexxhchen-nu/archaeo-doc-parser/issues"

[project.scripts]
archaeo-doc-parser = "archaeo_doc_parser.server:main"

[tool.hatch.build.targets.wheel]
packages = ["archaeo_doc_parser"]
